[project]
name = "jwt-tool"
version = "2.2.7"
description = "A toolkit for testing, tweaking and cracking JSON Web Tokens"
authors = [
    { name = "Andy Tyler", email="andy.tyler@gmail.com" }
]
dependencies = [
    "cprint",
    "pycryptodomex",
    "requests",
    "termcolor",
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"jwt-tool" = "jwt_tool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["jwt_tool"]
